--- a/pogema/training_configs/mac10_b.yaml
+++ b/pogema/training_configs/mac10_b.yaml
@@ -19,19 +19,7 @@ environment:
   name: Pogema-v0
   framestack: 1
   max_episode_steps: 256
-  # path_to_grid_configs: training_configs/train_maps
-  autocurriculum: 
-    curriculum_type: 
-      grid_search: ['SITP']
-    map_config: training_configs/train_maps
-    experiment_name: 'SITP 10'
-    param:
-      p_temperature: 
-        grid_search: [15]
-      p_more:
-        grid_search: [0.5]
-      a_smooth:
-        grid_search: [0.1]
+  path_to_grid_configs: training_configs/train_maps
   grid_config:
     num_agents: 64
     density: 0.3
